[project]
name = "ardiq"
version = "0.1.0"
description = "A fast distributed task queue with a Rust core and a Python API, backed by Redis streams."
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [{ name = "17tayyy", email = "oscarfdst@proton.me" }]
keywords = ["task-queue", "redis", "rust", "async", "asyncio", "distributed", "jobs", "worker"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Framework :: AsyncIO",
    "Topic :: System :: Distributed Computing",
    "Operating System :: POSIX :: Linux",
]
dependencies = [
    "msgpack>=1.1.2",
    "typer>=0.26.0",
]

[project.urls]
Repository = "https://github.com/17tayyy/ardiq"

[project.scripts]
ardiq = "ardiq.cli:main"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
manifest-path = "core/Cargo.toml"
module-name = "ardiq._core"
features = ["pyo3/abi3-py39"]
python-source = "."
include = ["ardiq/py.typed"]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ty.environment]
python-version = "3.13"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "redis>=8.0.0",
    "ruff>=0.15.15",
    "ty>=0.0.40",
]
